force-app/main/default/objects/Federal_Tax_Bracket__mdt/Federal_Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <description>Federal income tax bracket configuration by tax year and filing status.</description>
    <label>Federal Tax Bracket</label>
    <pluralLabel>Federal Tax Brackets</pluralLabel>
</CustomObject>