force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Base_Tax__c.field-meta.xml
<CustomField>
    <fullName>Base_Tax__c</fullName>
    <label>Base Tax</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>