force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Bracket_Number__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Number__c</fullName>
    <label>Bracket Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>