force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>