force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <label>Lower Bound</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>