force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>