force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>